fixed wood image behind border

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ button {
     left: 50%;
     top: 50%;
     transform:translate(-50%,-50%);
-    padding-top: 16%;
+    padding-top: 17%;
     padding-right: 1%;
     border-radius: 20px;
     box-shadow: 0 10px 18px 15px rgba(0,0,0,5), 10px 12px 22px 10px rgba(0,0,0,10);
